# DiaxiInject

./: .gitignore  README.md  diaxiinject.yaml  pyproject.toml  start_vllm.sh  test_scoring.py
data/refusal_patterns/: patterns.yaml
exports/: diaxiinject.db
research/: NOVEL-METHODOLOGY.md
src/diaxiinject/: __init__.py  campaign.py  cli.py  config.py  models.py  tui.py
src/diaxiinject/attacks/: __init__.py
src/diaxiinject/attacks/mutators/: __init__.py  chain.py  encoding.py  structural.py
src/diaxiinject/attacks/orchestrators/: __init__.py  compound.py  crescendo.py  genetic.py  pair.py  single_turn.py  tap.py
src/diaxiinject/attacks/probes/: __init__.py  excessive_agency.py  jailbreak.py  library.py  novel_methods.py  prompt_injection.py  system_prompt_leak.py
src/diaxiinject/attacks/scoring/: __init__.py  llm_judge.py  pipeline.py  rules.py
src/diaxiinject/memory/: __init__.py  database.py
src/diaxiinject/providers/: __init__.py  base.py  hub.py  litellm_adapter.py  local_llm.py
src/diaxiinject/strategy/: __init__.py  engine.py
src/diaxiinject/targets/: __init__.py  profiler.py
src/diaxiinject/targets/profiles/: anthropic.yaml  apple.yaml  google.yaml  huggingface.yaml  meta.yaml  microsoft.yaml  mistral.yaml  openai.yaml  xai.yaml
